# housekeeper

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  housekeeper.spec  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  checks.yml  codeql.yml  python-min.yml
docs/: index.md
installer/linux/: housekeeper.service  nfpm.yaml  postinstall.sh  preremove.sh
installer/macos/: create_dmg.sh
installer/windows/: housekeeper.iss
src/: main.py
src/housekeeper/: __init__.py  main.py
src/housekeeper/config/: __init__.py  loader.py
src/housekeeper/core/: __init__.py  watcher.py
src/housekeeper/daemon/: __init__.py  manager.py  runner.py  unix.py  windows.py
src/housekeeper/logging/: __init__.py  logger.py
src/housekeeper/macos/: __init__.py  app.py  launchd.py  notifications.py
src/housekeeper/notifications/: __init__.py  notifier.py
src/housekeeper/paths/: __init__.py  xdg.py
tests/: test_config.py  test_func.py  test_logger.py  test_notifier.py  test_paths.py  test_watcher.py
