[project]
name = "housekeeper"
version = "0.1.0"
description = "Protects your important directories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true

[tool.mypy]
strict = true
explicit_package_bases = true
ignore_missing_imports = true
