[project]
name = "housekeeper"
version = "0.1.0"
description = "Protects your important directories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.5.1",
    "plyer>=2.1.0",
    "python-daemon>=3.1.2 ; sys_platform != 'win32'",
    "pywin32>=311 ; sys_platform == 'win32'",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]

[project.scripts]
housekeeper = "housekeeper.main:main"

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "types-pywin32>=311.0.0.20251008",
    "vermin>=1.8.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true

[tool.mypy]
strict = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 79
target-version = "py311"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "N",
    "D",
    "UP",
    "I",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["housekeeper"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv]
package = true

